# nlp-support-pipeline-mlops

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  linters.yml
notebooks/: best_email_classifier.pkl  eda.ipynb
src/: config.py
src/data/: dataset.py  preprocessing.py
src/models/: classifier.py  embeddings.py  vector_store.py
src/monitoring/: evidently_reports.py
src/pipelines/: batch_inference.py  training_pipeline.py
