[project]
name = "nlp-support-pipeline-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.0",
    "nltk>=3.9.2",
    "pandas>=3.0.0",
    "sentence-transformers>=5.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
