[project]
name = "nlp-support-pipeline-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "pandas>=3.0.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
